Fix locale switcher text get cut on smaller screen

--- a/wp-content/themes/twentyseventeen-wp20/style.css
+++ b/wp-content/themes/twentyseventeen-wp20/style.css
@@ -599,7 +599,6 @@ body.page .entry-header {
 	text-align: right;
 	height: 55px;
 	line-height: 55px;
-	width: 50%;
 }
 
 @media screen and (max-width:47em) {
